@@ -1,5 +1,12 @@
 2011-01-22  Colin Watson  <cjwatson@ubuntu.com>
 
+	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Consider a
+	path unreadable if `grub-probe -t abstraction' fails, for example if
+	memberlist fails on an LVM volume group.
+	Reported by: Darius Jahandarie.
+
+2011-01-22  Colin Watson  <cjwatson@ubuntu.com>
+
 	* docs/grub.texi (Simple configuration): Document
 	GRUB_PRELOAD_MODULES.
 
